--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">notification</string>
     <string name="time_reamining">Time Reamining: %d</string>
+    <string name="label">reply</string>
+    <string name="reply_label">enter a message</string>
 </resources>
